<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="225dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="3dip"
            android:layout_span="2"
            android:stretchColumns="1" >

            <TableRow android:gravity="left" >

                <!--
                 <TextView
                android:gravity="left|center"
                android:padding="3dip"
                android:text="@string/payment_label_scratch_operator"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
                -->

<!--                 <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
 -->
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:orientation="horizontal" 
                    >

                    <RadioButton
                        android:id="@+id/radio_scratch_vina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Vina"
                        android:textColor="#ffffff"/>

                    <RadioButton
                        android:id="@+id/radio_scratch_mobi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobi" 
                         android:textColor="#ffffff"/>

                    <RadioButton
                        android:id="@+id/radio_scratch_viettel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="V.Tel" 
                        android:textColor="#ffffff"/>
                </RadioGroup>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/payment_label_scratch_code"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_scratch_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:hint="@string/payment_label_scratch_code_hint"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:numeric="decimal" >
                </EditText>
            </TableRow>

            <TableRow android:id="@+id/tbr_scratch_seri" >

                <TextView
                    android:gravity="left"
                    android:padding="3dip"
                    android:text="@string/payment_label_scratch_seri"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_scratch_seri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:hint="@string/payment_label_scratch_seri_hint"
                    android:maxLength="15"
                    android:maxLines="1">
                </EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_scratch_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:ellipsize="end"
                android:text=""
                android:textColor="#FFFFFF"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>